--- a/index.html
+++ b/index.html
@@ -3,147 +3,166 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
 
-<title>이용 안내</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;800&display=swap" rel="stylesheet">
+
+<title>Coin-X 이용 안내</title>
 
 <style>
 
 body {
-    margin: 0;
-    font-family: "Noto Sans KR", sans-serif;
-    background: linear-gradient(to right, #f2f2f2, #e8e8e8);
-    line-height: 1.6;
+    margin:0;
+    font-family:"Noto Sans KR",sans-serif;
+    background:#0b0e11;
+    color:#eaecef;
 }
 
-/* 상단 메뉴 */
-.nav {
-    display: flex;
-    background: #1f1f1f;
+/* ⭐ 업비트 스타일 스크롤바 */
+#scrollBar{
+    position:fixed;
+    top:0;
+    left:0;
+    height:4px;
+    width:0%;
+    background:#00c853;
+    z-index:9999;
 }
 
-.nav button {
-    flex: 1;
-    padding: 28px;
-    border: none;
-    background: #1f1f1f;
-    color: white;
-    font-size: 24px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: 0.3s;
+/* 로고 */
+.logo{
+    text-align:center;
+    font-size:30px;
+    font-weight:800;
+    padding:25px;
+    background:#12161c;
+    border-bottom:1px solid #1e2329;
 }
 
-.nav button:hover {
-    background: #333;
+/* 메뉴 */
+.nav{
+    display:flex;
+    background:#12161c;
+    border-bottom:1px solid #1e2329;
 }
 
-.nav button.active {
-    background: #4CAF50;
+.nav button{
+    flex:1;
+    padding:25px;
+    border:none;
+    background:transparent;
+    color:#aaa;
+    font-size:30px;
+    font-weight:700;
+    cursor:pointer;
+    transition:0.2s;
 }
 
-/* 탭 */
-.tab {
-    display: none;
-    padding: 40px 20px;
+.nav button:hover{
+    color:white;
 }
 
-/* 중앙 카드 */
-.content-box {
-    max-width: 820px;
-    margin: auto;
-    background: white;
-    padding: 45px;
-    border-radius: 18px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+.nav button.active{
+    color:#00c853;
+    border-bottom:3px solid #00c853;
+}
+
+/* 카드 */
+.content-box{
+    max-width:900px;
+    margin:40px auto;
+    background:#12161c;
+    padding:45px;
+    border-radius:10px;
+    border:1px solid #1e2329;
 }
 
 /* 제목 */
-.content-box h2 {
-    text-align: center;
-    margin-bottom: 50px;
-    font-size: 34px;   /* ⭐ 크게 */
-    font-weight: 700;
-    color: #222;
+.content-box h2{
+    text-align:center;
+    margin-bottom:55px;
+    font-size:34px;
+    font-weight:800;
 }
 
-/* 단계 박스 */
-.step {
-    margin-bottom: 65px;
-    text-align: center;
-    transition: 0.3s;
-}
-
-.step:hover {
-    transform: translateY(-3px);
+/* 단계 */
+.step{
+    text-align:center;
+    margin-bottom:60px;
+    padding-bottom:30px;
+    border-bottom:1px solid #1e2329;
 }
 
 /* 단계 번호 */
-.step-number {
-    width: 44px;
-    height: 44px;
-    font-size: 20px;
-    background: linear-gradient(135deg, #4CAF50, #66bb6a);
-    color: white;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 15px;
-    font-weight: bold;
+.step-number{
+    width:45px;
+    height:45px;
+    background:#00c853;
+    color:white;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin:auto;
+    margin-bottom:15px;
+    font-weight:bold;
 }
 
 /* 이미지 */
-.step img {
-    width: 420px;
-    max-width: 92%;
-    border-radius: 15px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.2);
-    margin: 18px 0;
-    cursor: zoom-in;
-    transition: 0.2s;
+.step img{
+    width:450px;
+    max-width:95%;
+    border-radius:10px;
+    border:1px solid #1e2329;
+    margin:18px 0;
+    cursor:pointer;
+    transition:0.3s;
 }
 
-.step img:hover {
-    transform: scale(1.04);
+.step img:hover{
+    transform:scale(1.03);
 }
 
 /* 설명 */
-.step p {
-    font-size: 40px;
-    font-weight: 500;
-    color: #444;
+.step p{
+    font-size:30px;
+    font-weight:600;
 }
 
-/* ================== */
-/* ⭐ 이미지 확대 모달 */
-/* ================== */
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.85);
-    justify-content: center;
-    align-items: center;
+/* 모달 */
+.modal{
+    display:none;
+    position:fixed;
+    z-index:999;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.9);
+    justify-content:center;
+    align-items:center;
 }
 
-.modal-content {
-    max-width: 85%;
-    max-height: 85%;
-    border-radius: 15px;
-    transform: scale(0.7);
-    opacity: 0;
-    transition: all 0.3s ease;
+.modal-content{
+    max-width:85%;
+    max-height:85%;
+    border-radius:12px;
 }
 
-.modal.show .modal-content {
-    transform: scale(1);
-    opacity: 1;
+/* 모바일 */
+@media(max-width:600px){
+
+.nav button{
+    font-size:16px;
+}
+
+.step p{
+    font-size:18px;
+}
+
+.content-box{
+    padding:25px;
+}
+
 }
 
 </style>
@@ -151,137 +170,138 @@ body {
 
 <body>
 
-<div class="nav">
-    <button class="tabBtn active" onclick="openTab(event,'join')">가입 설명서</button>
-    <button class="tabBtn" onclick="openTab(event,'buy')">구매 설명서</button>
-</div>
+<div id="scrollBar"></div>
 
+<div class="logo">Coin-X Guide</div>
+
+<div class="nav">
+<button class="tabBtn active" onclick="openTab(event,'join')">가입 설명서</button>
+<button class="tabBtn" onclick="openTab(event,'buy')">구매 설명서</button>
+</div>
 
 <!-- 가입 -->
 <div id="join" class="tab" style="display:block;">
-    <div class="content-box">
+<div class="content-box">
 
-        <h2>Coin-X 가입 방법</h2>
+<h2>Coin-X 가입 방법</h2>
 
-        <div class="step">
-            <div class="step-number">1</div>
-            <img src="accession.png">
-            <p>1. 회원가입 버튼 클릭</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">2</div>
-            <img src="accession1.png">
-            <p>2. 아이디, 비밀번호, 닉네임 입력 후 본인 인증</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">3</div>
-            <img src="accession2.png">
-            <p>3. 통신사 본인 확인 진행</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">4</div>
-            <img src="accession3.png">
-            <p>4. 정보 입력 후 인증번호 입력</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">5</div>
-            <img src="accession4.png">
-            <p>5. 약관 동의 후 가입 완료</p>
-        </div>
-
-    </div>
+<div class="step">
+<div class="step-number">1</div>
+<img src="accession.png">
+<p>회원가입 버튼 클릭</p>
 </div>
 
+<div class="step">
+<div class="step-number">2</div>
+<img src="accession1.png">
+<p>아이디 / 비밀번호 입력 후 인증</p>
+</div>
+
+<div class="step">
+<div class="step-number">3</div>
+<img src="accession2.png">
+<p>통신사 본인 인증</p>
+</div>
+
+<div class="step">
+<div class="step-number">4</div>
+<img src="accession3.png">
+<p>정보 입력 후 인증번호 입력</p>
+</div>
+
+<div class="step">
+<div class="step-number">5</div>
+<img src="accession4.png">
+<p>약관 동의 후 가입 완료</p>
+</div>
+
+</div>
+</div>
 
 <!-- 구매 -->
 <div id="buy" class="tab">
-    <div class="content-box">
+<div class="content-box">
 
-        <h2>Coin-X 구매 방법</h2>
+<h2>Coin-X 구매 방법</h2>
 
-        <div class="step">
-            <div class="step-number">1</div>
-            <img src="buy.png">
-            <p>1. 로그인 하기</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">2</div>
-            <img src="buy1.png">
-            <p>2. 구매버튼 클릭</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">3</div>
-            <img src="buy2.png">
-            <p>3. 구매신청 하기</p>
-        </div>
-
-        <div class="step">
-            <div class="step-number">4</div>
-            <img src="buy3.png">
-            <p>4. 구매 신청 후 계좌에 입금</p>
-        </div>
-
-    </div>
+<div class="step">
+<div class="step-number">1</div>
+<img src="buy.png">
+<p>로그인</p>
 </div>
 
+<div class="step">
+<div class="step-number">2</div>
+<img src="buy1.png">
+<p>구매 버튼 클릭</p>
+</div>
 
-<!-- 이미지 확대 모달 -->
+<div class="step">
+<div class="step-number">3</div>
+<img src="buy2.png">
+<p>구매 신청</p>
+</div>
+
+<div class="step">
+<div class="step-number">4</div>
+<img src="buy3.png">
+<p>입금 완료</p>
+</div>
+
+</div>
+</div>
+
+<!-- 이미지 확대 -->
 <div id="imgModal" class="modal" onclick="closeModal()">
-    <img class="modal-content" id="modalImg">
+<img class="modal-content" id="modalImg">
 </div>
-
 
 <script>
 
-/* 탭 전환 */
-function openTab(evt, tabName) {
+/* 탭 */
+function openTab(evt,tabName){
 
-    let tabs = document.getElementsByClassName("tab");
-    for (let tab of tabs) tab.style.display = "none";
+let tabs=document.getElementsByClassName("tab");
+for(let tab of tabs) tab.style.display="none";
 
-    let btns = document.getElementsByClassName("tabBtn");
-    for (let btn of btns) btn.classList.remove("active");
+let btns=document.getElementsByClassName("tabBtn");
+for(let btn of btns) btn.classList.remove("active");
 
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.classList.add("active");
+document.getElementById(tabName).style.display="block";
+evt.currentTarget.classList.add("active");
 }
 
-/* 이미지 확대 기능 */
+/* 이미지 확대 */
 
-const modal = document.getElementById("imgModal");
-const modalImg = document.getElementById("modalImg");
+const modal=document.getElementById("imgModal");
+const modalImg=document.getElementById("modalImg");
 
-document.querySelectorAll(".step img").forEach(img => {
-    img.onclick = function(e) {
-
-        e.stopPropagation();
-
-        modal.style.display = "flex";
-        modalImg.src = this.src;
-
-        setTimeout(() => {
-            modal.classList.add("show");
-        }, 10);
-    }
+document.querySelectorAll(".step img").forEach(img=>{
+img.onclick=function(e){
+e.stopPropagation();
+modal.style.display="flex";
+modalImg.src=this.src;
+}
 });
 
-function closeModal() {
-
-    modal.classList.remove("show");
-
-    setTimeout(() => {
-        modal.style.display = "none";
-    }, 300);
+function closeModal(){
+modal.style.display="none";
 }
+
+/* ⭐ 스크롤 진행바 */
+
+window.addEventListener("scroll",()=>{
+
+let scrollTop=document.documentElement.scrollTop;
+let scrollHeight=document.documentElement.scrollHeight-document.documentElement.clientHeight;
+
+let percent=(scrollTop/scrollHeight)*100;
+
+document.getElementById("scrollBar").style.width=percent+"%";
+
+});
 
 </script>
 
 </body>
 </html>
-
